<resources>
    <string name="app_name">Ingredient Calculator</string>
    <string name="peso_do_produto">Peso do produto</string>
    <string name="preco_do_produto">Preço do produto</string>
    <string name="resultado">Resultado</string>
    <string name="kg">KG</string>
    <string name="peso_utilizado">Peso utilizado</string>
    <string name="rs">R$</string>
    <string name="_0_00">0,00</string>
    <string name="_0_000">0,000</string>
    <string name="rs_0_00">R$ 0,00</string>
    <string name="peso">Peso</string>
    <string name="liquido">Líquido</string>
    <string name="litros_do_produto">Litros do produto</string>
    <string name="litros_utilizado">Litros utilizado</string>
</resources>