<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:id="@+id/preco_do_produto_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="false">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_money_bag"
            android:backgroundTint="@color/purple_500"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/preco_do_produto"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preco_do_produto_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_scale"
            android:backgroundTint="@color/purple_500"
            android:focusable="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/peso_do_produto"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/peso_do_produto_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_scale"
            android:backgroundTint="@color/purple_500"
            android:focusable="false"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="35dp"
            android:hint="@string/peso_utilizado"
            style="@style/CustomTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/peso_utilizado_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </GridLayout>


    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resultado"
        android:textColor="@color/purple_500"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preco_do_produto_input_layout"
        />

    <TextView
        android:id="@+id/resultado_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rs_0_00"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

</androidx.constraintlayout.widget.ConstraintLayout>